Use flexbox instead translate coordainte method to make page in center of scre

--- a/app/views/homes/new.html.erb
+++ b/app/views/homes/new.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body class="single-page-body">
     <div class="home-background">
-      <div class="flex-column-center">
+      <div class="flex-center">
         <h1 class="home-logo">Tower</h1>
         <h1 class="solgan">团队协作本来就应该这么简单</h1>
         <p><button class="btn btn-primary click-button">
