--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -37,7 +37,7 @@
 }
 
 .solgan {
-    font-size: 250%;
+    font-size: 260%;
     color: var(--logo-text-color);
     font-weight: bold;
     opacity: 0.9;
@@ -79,16 +79,6 @@
     border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-shadow: 0px 10px 50px #eeeeee;
-}
-
-.sign-in-area,
-.sign-up-area {
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background: transparent;
-    text-align: center;
 }
 
 .sign-error {
@@ -146,6 +136,16 @@ li {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+.flex-center {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
 }
 
 .flex-align-right {
