--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -5,18 +5,16 @@
   </head>
   <body class="single-page-body">
     <div class="single-page-background">
-      <div class="single-page-container">
-        <div class="sign-in-area">
-          <h1 class="logo">Tower</h1>
-          <div class="sign-box">
-            <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
-	      <%= hidden_field_tag :email, @user.email %>
-	      
-              <h3 class="sign-title">设置新的密码</h3>
-              <p><%= f.password_field :password, class: "form-control", placeholder: "请填写新的密码" %></p>
-              <p><%= f.submit "更新密码", class: "btn btn-primary click-button" %></p>
-            <% end%>
-          </div>
+      <div class="flex-center">
+        <h1 class="logo">Tower</h1>
+        <div class="sign-box">
+          <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
+	    <%= hidden_field_tag :email, @user.email %>
+
+            <h3 class="sign-title">设置新的密码</h3>
+            <p><%= f.password_field :password, class: "form-control", placeholder: "请填写新的密码" %></p>
+            <p><%= f.submit "更新密码", class: "btn btn-primary click-button" %></p>
+          <% end%>
         </div>
       </div>
     </div>
