Use body id controll js code execute for different html template.

--- a/app/views/teams/show.html+phone.erb
+++ b/app/views/teams/show.html+phone.erb
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
+  <body id="<%= controller.controller_name %>-<%= controller.action_name %>-phone">
     <div class="phone-page-box col-xs-12">
       <div class="phone-page-top-bar flex-vcenter">
         <span class="phone-top-name">项目</span>
