--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body class="content-page-body">
+  <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <nav class="navbar">
       <div class="container top-header">
         <ul class="nav navbar-nav navbar-left">
