Adjust flash js and css code

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -102,6 +102,15 @@
 }
 
 // Generic page CSS.
+.alert {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 9999;
+    border-radius: 0px;
+}
+
 ul {
     list-style-type: none;
     padding: 0;
