--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
 
   <body>
     <% flash.each do |message_type, message| %>
-      <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <div class="alert alert-<%= message_type %>"><%= message %>
+	<button type="button" class="close" data-dismiss="alert">&#x2715</button>
+      </div>
     <% end %>
     <%= yield %>
   </body>
