Remove drag/drop feature from phone client.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -417,7 +417,8 @@ li {
 .phone-project-icon {
     color: var(--logo-color);
     font-size: 32px;
-    margin-right: 10px;
+    margin-left: 24px;
+    margin-right: 18px;
 }
 
 .phone-project-item-name {
