Build header/footer template.

--- a/app/views/projects/index.html+phone.erb
+++ b/app/views/projects/index.html+phone.erb
@@ -88,30 +88,7 @@
         </ul>
       </div>
 
-      <div class="phone-page-bottom-bar flex-vcenter-columns">
-	<div class="phone-bottom-tab">
-          <div class="glyphicon glyphicon-inbox phone-bottom-item-icon"></div>
-          <div>项目</div>
-        </div>
-        <div class="phone-bottom-tab">
-          <div class="glyphicon glyphicon-comment phone-bottom-item-icon"></div>
-          <div>动态</div>
-        </div>
-        <div class="phone-bottom-tab">
-          <div class="glyphicon glyphicon-user phone-bottom-item-icon"></div>
-          <div>我的</div>
-        </div>
-        <div class="phone-bottom-tab">
-          <div class="glyphicon glyphicon-calendar phone-bottom-item-icon"></div>
-          <div>团队</div>
-        </div>
-        <div class="phone-bottom-tab">
-          <div class="glyphicon glyphicon-tasks phone-bottom-item-icon"></div>
-	  <div>更多</div>
-        </div>
-      </div>
-
+      <%= render 'layouts/footer' %>
     </div>
-
   </body>
 </html>
