--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,48 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
-    <nav class="navbar">
-      <div class="container top-header">
-        <ul class="nav navbar-nav navbar-left">
-          <li><%= link_to Team.find_by_hashid(params[:team_id]).name, root_path, :class => "team-name"%></li>
-          <li><%= link_to "项目", root_path, :class => "top-header-item" %></li>
-          <li><%= link_to "动态", root_path, :class => "top-header-item" %></li>
-          <li><%= link_to "团队", root_path, :class => "top-header-item" %></li>
-          <li><%= link_to "我自己", root_path, :class => "top-header-item" %></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <div class="col-sm-3 col-md-3">
-              <form class="navbar-form" role="search">
-                <div class="input-group input-group-sm mb-3 top-search-bar-group">
-                  <input type="text" class="form-control top-search-bar-input" placeholder="搜索任务">
-                  <div class="input-group-btn">
-                    <button class="btn btn-default top-search-bar-button" type="submit">
-                      <span class="glyphicon glyphicon-search top-search-bar-icon"></span>
-                    </button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </li>
-          <li><a><span class="glyphicon glyphicon-bell phone-bottom-item-icon top-header-item"></span></a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle sign-link" data-toggle="dropdown">
-              <span class="top-header-item">账户</span>
-              <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "设置", '#' %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to "退出", sign_out_path, method: :delete %>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
+    <%= render 'layouts/header' %>
     <div class="project-box">
 
       <div class="project-button-group">
