Add project new page.

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -8,7 +8,7 @@
 
       <div class="project-button-group">
         <span class="glyphicon glyphicon-plus"></span>
-        <%= link_to "新建项目", root_path, :class => "project-button" %>
+        <%= link_to "新建项目", new_team_project_path, :class => "project-button" %>
         <div class="float-right">
           <span class="glyphicon glyphicon-star project-button"></span>
           <span class="glyphicon glyphicon-th-large project-button"></span>
