--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -102,6 +102,10 @@
 }
 
 // Generic page CSS.
+a:link {
+    text-decoration: none;
+}
+
 .alert {
     position: fixed;
     top: 0px;
@@ -177,6 +181,28 @@ li {
     width: 256px;
 }
 
+.submit-button {
+    width: 80px;
+}
+
+.submit-cancel-link {
+    color: var(--link-text-color);
+    font-size: 16px;
+    margin-left: 16px;
+}
+
+.submit-cancel-link:hover {
+    color: var(--hover-color);
+    text-decoration: none;
+}
+
+.submit-cancel-link:active,
+.submit-cancel-link:active:hover,
+.submit-cancel-link:active:focus,
+.submit-cancel-link:focus {
+    color: var(--focus-color);
+}
+
 .btn {
     box-shadow: none !important;
     outline: none !important;
@@ -244,6 +270,46 @@ li {
     background-color: var(--background-color);
 }
 
+.card-title {
+    margin-top: 10px;
+    margin-bottom: 40px;
+    font-size: 20px;
+    font-weight: 900;
+}
+
+.card-summary {
+    resize: none;
+}
+
+.top-bar-box {
+    background-color: rgba(250, 250, 250, 1);
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom-style: none;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    box-shadow: 0px 10px 50px #eee;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    width: 880px;
+    overflow: hidden;		// make parent div expand height when have 'float' child div in it
+    cursor: pointer;
+    font-size: 18px;
+    color: #999;
+}
+
+.top-bar-box:hover {
+    background-color: #fff;
+}
+
+.submit-area {
+    margin-top: 24px;
+}
+
 .project-box {
     background-color: #fff;
     border-radius: 4px;
@@ -257,6 +323,7 @@ li {
     padding-right: 30px;
     padding-top: 20px;
     width: 900px;
+    overflow: hidden;		// make parent div expand height when have 'float' child div in it
 }
 
 .project-button-group {
