--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -12,15 +12,15 @@
 
     <div class="project-box">
 
-      <%= form_for(:session, url: sign_in_path) do |f| %>
+      <%= form_for(:project, url: team_projects_path) do |f| %>
 	<div class="card-title">创建新项目</div>
         <p><%= f.text_field :name, class: "form-control", placeholder: "项目名称" %></p>
         <p><%= f.text_area :summary, rows: "5", class: "form-control card-summary", placeholder: "简单描述项目, 便于其他人理解 (选填)" %></p>
 	<div class="flex-vcenter submit-area">
-          <%= f.submit "创建", type: "button", class: "btn btn-primary btn-xs submit-button" %>
+          <%= f.submit "创建", class: "btn btn-primary btn-xs submit-button" %>
           <%= link_to "取消", team_projects_path, :class => "submit-cancel-link" %>
 	</div>
       <% end%>
-      </div>
+    </div>
   </body>
 </html>
