--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,104 +17,14 @@
       </div>
 
       <div class="project-container" id="sortableContainer">
-        <div class="project-item">
-          <div class="flex-column-center">
-            <div class="glyphicon glyphicon-inbox project-icon"></div>
-            <div class="project-name">文件管理器</div>
+        <% Team.find_by_hashid(params[:team_id]).projects.each do |project| %>
+          <div class="project-item">
+            <div class="flex-column-center">
+              <span class="glyphicon <%= project.icon %> project-icon"></span>
+              <div class="project-name"><%= project.name %></div>
+            </div>
           </div>
-        </div>
-
-        <div class="project-item">
-          <div class="flex-column-center">
-            <span class="glyphicon glyphicon-time project-icon"></span>
-            <div class="project-name">智能语音闹钟</div>
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="flex-column-center">
-            <span class="glyphicon glyphicon-lock project-icon"></span>
-            <div class="project-name">超强加密客户端</div>
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="flex-column-center">
-            <span class="glyphicon glyphicon-print project-icon"></span>
-            <div class="project-name">打印机分享技术</div>
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="flex-column-center">
-            <span class="glyphicon glyphicon-camera project-icon"></span>
-            <div class="project-name">相机助手</div>
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="flex-column-center">
-            <span class="glyphicon glyphicon-fire project-icon"></span>
-            <div class="project-name">光盘刻录程序</div>
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="flex-column-center">
-            <span class="glyphicon glyphicon-plane project-icon"></span>
-            <div class="project-name">机票预订助手</div>
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="flex-column-center">
-            <span class="glyphicon glyphicon-shopping-cart project-icon"></span>
-            <div class="project-name">在线购物网站</div>
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="flex-column-center">
-            <span class="glyphicon glyphicon-hdd project-icon"></span>
-            <div class="project-name">在线存储项目</div>
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="flex-column-center">
-            <span class="glyphicon glyphicon-globe project-icon"></span>
-            <div class="project-name">人造卫星技术</div>
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="flex-column-center">
-            <span class="glyphicon glyphicon-phone project-icon"></span>
-            <div class="project-name">智能手机生产</div>
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="flex-column-center">
-            <span class="glyphicon glyphicon-flash project-icon"></span>
-            <div class="project-name">快速SD卡</div>
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="flex-column-center">
-            <span class="glyphicon glyphicon-stats project-icon"></span>
-            <div class="project-name">无线通讯技术</div>
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="flex-column-center">
-            <span class="glyphicon glyphicon-blackboard project-icon"></span>
-            <div class="project-name">多人智能会议系统</div>
-          </div>
-        </div>
-
+        <% end %>
       </div>
     </div>
   </body>
