--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
       </li>
       <li><a><span class="glyphicon glyphicon-bell phone-bottom-item-icon top-header-item"></span></a></li>
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle sign-link" data-toggle="dropdown">
+        <a href="#" class="dropdown-toggle link-button-small" data-toggle="dropdown">
           <span class="top-header-item">账户</span>
           <b class="caret"></b>
         </a>
