--- a/app/views/homes/new.html.erb
+++ b/app/views/homes/new.html.erb
@@ -8,10 +8,10 @@
       <div class="flex-center">
         <h1 class="home-logo">Tower</h1>
         <h1 class="solgan">团队协作本来就应该这么简单</h1>
-        <p><button class="btn btn-primary click-button">
+        <p><button class="btn btn-primary sign-button-width sign-button-vertical-margins">
           <%= link_to "免费注册", sign_up_path, :style => "color:inherit", :class => "no-underline-link" %>
         </button></p>
-        <p><button class="btn btn-link click-button">
+        <p><button class="btn btn-link sign-button-width sign-button-vertical-margins">
           <%= link_to "登录", sign_in_path, :style => "color:inherit", :class => "no-underline-link" %>
         </button></p>
       </div>
