--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -9,9 +9,9 @@
         <h1 class="logo">Tower</h1>
         <div class="sign-box">
           <%= form_for(:password_reset, url: password_resets_path) do |f| %>
-            <h3 class="sign-title">重新设置密码</h3>
+            <h3 class="margin-bottom-normal">重新设置密码</h3>
             <p><%= f.email_field :email, class: "form-control", placeholder: "请填写登录邮箱" %></p>
-            <p><%= f.submit "发送密码重设邮件", class: "btn btn-primary click-button" %></p>
+            <p><%= f.submit "发送密码重设邮件", class: "btn btn-primary sign-button-width sign-button-vertical-margins" %></p>
           <% end%>
         </div>
       </div>
