--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,19 +4,19 @@
   </head>
   <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'layouts/header' %>
-    <div class="project-box">
+    <div class="board-box">
 
-      <div class="project-button-group">
+      <div class="link-button-group">
         <span class="glyphicon glyphicon-plus"></span>
-        <%= link_to "新建项目", new_team_project_path, :class => "project-button" %>
+        <%= link_to "新建项目", new_team_project_path, :class => "link-button" %>
         <div class="float-right">
-          <span class="glyphicon glyphicon-star project-button"></span>
-          <span class="glyphicon glyphicon-th-large project-button"></span>
-          <span class="glyphicon glyphicon-search project-button"></span>
+          <span class="glyphicon glyphicon-star link-button"></span>
+          <span class="glyphicon glyphicon-th-large link-button"></span>
+          <span class="glyphicon glyphicon-search link-button"></span>
         </div>
       </div>
 
-      <div class="project-container" id="sortableContainer">
+      <div class="grid-container" id="sortableContainer">
         <% Team.find_by_hashid(params[:team_id]).projects.each do |project| %>
           <div class="project-item">
             <div class="flex-column-center">
