--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -5,20 +5,20 @@
   <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'layouts/header' %>
     <%= link_to team_projects_path do %>
-      <div class="top-bar-box">
+      <div class="bread-crumbs-big">
 	所有项目
       </div>
     <% end %>
 
-    <div class="project-box">
+    <div class="board-box">
 
       <%= form_for(:project, url: team_projects_path) do |f| %>
-	<div class="card-title">创建新项目</div>
+	<div class="form-title">创建新项目</div>
         <p><%= f.text_field :name, class: "form-control", placeholder: "项目名称" %></p>
-        <p><%= f.text_area :summary, rows: "5", class: "form-control card-summary", placeholder: "简单描述项目, 便于其他人理解 (选填)" %></p>
-	<div class="flex-vcenter submit-area">
-          <%= f.submit "创建", class: "btn btn-primary btn-xs submit-button" %>
-          <%= link_to "取消", team_projects_path, :class => "submit-cancel-link" %>
+        <p><%= f.text_area :summary, rows: "5", class: "form-control remove-textarea-resize-button", placeholder: "简单描述项目, 便于其他人理解 (选填)" %></p>
+	<div class="flex-vcenter margin-top-normal">
+          <%= f.submit "创建", class: "btn btn-primary btn-xs submit-button-width" %>
+          <%= link_to "取消", team_projects_path, :class => "link-button-big margin-left-normal" %>
 	</div>
       <% end%>
     </div>
