--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,9 @@
   <div class="container top-header">
     <ul class="nav navbar-nav navbar-left">
       <li><%= link_to Team.find_by_hashid(params[:team_id]).name, root_path, :class => "team-name"%></li>
-      <li><%= link_to "项目", team_projects_path, :class => "top-header-item" %></li>
+      <li><%= link_to "项目", team_projects_url(params[:team_id]), :class => "top-header-item" %></li>
       <li><%= link_to "动态", root_path, :class => "top-header-item" %></li>
-      <li><%= link_to "团队", team_members_path, :class => "top-header-item" %></li>
+      <li><%= link_to "团队", team_members_url(params[:team_id]), :class => "top-header-item" %></li>
       <li><%= link_to "我自己", root_path, :class => "top-header-item" %></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
