--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -148,6 +148,16 @@
     margin-top: 5px;
 }
 
+.margins-horizontal-normal {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.margins-vertical-normal {
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+
 .margin-bottom-normal {
     margin-bottom: 20px;
 }
@@ -303,6 +313,11 @@ li {
 // Desktop page CSS.
 .content-page-body {
     background-color: var(--background-color);
+}
+
+.new-mission-title {
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .project-title {
