--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,6 +8,11 @@
       <div class="project-title"><%= Project.find_by_hashid(params[:id]).name %> </div>
       <div class="project-splitter-bold"></div>
       <div class="project-splitter-light"></div>
+
+      <div class="flex-vcenter margins-vertical-normal">
+	<button type="button" class="btn btn-default btn-sm">添加任务</button>
+	<button type="button" class="btn btn-default btn-sm margins-horizontal-normal">添加任务清单</button>
+      </div>
     </div>
   </body>
 </html>
