--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -602,7 +602,7 @@ li {
     text-align: center;
 }
 
-.mission-list {
+.mission-list-title {
     font-size: 16px;
     font-weight: 500;
     margin-top: 20px;
@@ -708,4 +708,28 @@ li {
     font-size: 15px;
     font-weight: 350;
     margin-left: 40px;
+}
+
+.mission-list-area {
+    // margin-top: 22px;
+    // width: 200px;
+    // float: right;
+    // clear: both;
+    width: 200px;
+    height: 600px;
+    position: fixed;
+    float: right;
+    left: 65%;
+    z-index: 999;
+    margin-left: 0px;
+    background-color: red;
+}
+
+.mission-list {
+    font-size: 15px;
+    font-weight: 350;
+    display: inline-block;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    padding-bottom: 2px;
+    width: 100%;
 }
